--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         async function submitTransaction(functionName, functionArgs) {
             const options = {
                 contractAddress: 'SP3NE50GEXFG9SZGTT51P40X2CKYSZ5CC4ZTZ7A2G', // Replace with your contract address
-                contractName: 'functions', // Replace with your contract name
+                contractName: 'functions.clar', // Replace with your contract name
                 functionName,
                 functionArgs,
                 network,
