--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
             border: none;
             border-radius: 5px;
         }
-        .diamond-container {
+        #info-container {
             display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 120px;
-            height: 120px;
-            transform: rotate(45deg);
+            justify-content: space-between;
+            width: 100%;
+            max-width: 800px;
+            margin: 20px 0;
+        }
+        .info-box {
             background-color: #007bff;
             color: white;
-            font-size: 16px;
-            margin-bottom: 20px;
-        }
-        .diamond-content {
-            transform: rotate(-45deg);
+            padding: 20px;
+            border-radius: 10px;
             text-align: center;
+            flex: 1;
+            margin: 0 10px;
         }
         #buy-ticket-container {
             text-align: center;
@@ -139,14 +139,16 @@
 
     <div id="connected-address">Not connected</div>
 
-    <div id="buy-ticket-container">
-        <div class="diamond-container">
-            <div class="diamond-content">
-                <p>Block Height: <span id="block-height">Loading...</span></p>
-                <p>Pool Amount: <span id="pool-amount">Loading...</span></p>
-                <p>Countdown: <span id="countdown">--:--</span></p>
-            </div>
+    <div id="info-container">
+        <div class="info-box">
+            <p>Block Height: <span id="block-height">Loading...</span></p>
         </div>
+        <div class="info-box">
+            <p>Pool Amount: <span id="pool-amount">Loading...</span></p>
+        </div>
+    </div>
+
+    <div id="buy-ticket-container">
         <h2>Buy a Ticket</h2>
         <div class="submit-main">
             <div class="submit-box">
