--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://unpkg.com/@stacks/connect@latest/dist/connect.umd.js"></script>
     <script src="https://unpkg.com/@stacks/transactions@latest/dist/transactions.umd.js"></script>
     <script src="https://unpkg.com/@stacks/network@latest/dist/network.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sats-connect@latest/dist/sats-connect.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -183,18 +184,22 @@
         const network = new StacksTestnet();
         let countdownInterval;
 
-        document.getElementById('connect-wallet').onclick = function () {
-            showConnect({
-                appDetails: {
-                    name: 'Lottery DApp',
-                    icon: window.location.origin + '/path/to/your/icon.png', // Update the path to your app icon
-                },
-                userSession,
-                onFinish: () => {
-                    const userData = userSession.loadUserData();
-                    document.getElementById('connected-address').innerText = 'Connected: ' + userData.profile.stxAddress.testnet;
-                },
-            });
+        const { getAddress } = SatsConnect;
+
+        document.getElementById('connect-wallet').onclick = async function () {
+            try {
+                const response = await getAddress({
+                    payload: {},
+                    network: {
+                        type: 'Testnet', // Change to 'Mainnet' for production
+                    },
+                });
+
+                const address = response.address;
+                document.getElementById('connected-address').innerText = 'Connected: ' + address;
+            } catch (error) {
+                console.error('Error connecting to wallet:', error);
+            }
         };
 
         async function fetchBlockHeight() {
