--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #f0f2f5;
+            background-image: url('MEME CASINO.webp');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             margin: 0;
             padding: 20px;
         }
